==> hugedragonroot/handle/handle/driver/Project/BSP/bsp_i2c.c <==
#include "bsp_i2c.h"
#define Delay mdelay
#define I2C_Speed              300000  //*
#define I2Cx_OWN_ADDRESS7      0X0A
#define Soft_I2C_DELAY 				Soft_I2C_Delay(1000000)  /* 72M */
#define Soft_I2C_NOP					system_driver_delay_us(1)      /* 72M */   /* 约300k */
#define Soft_I2C_tAck         500                     /* 72M */
#define ST_Sensors_I2C_WriteRegister    ST_Hard_Sensors_I2C_WriteRegister
#define ST_Sensors_I2C_ReadRegister     ST_Hard_Sensors_I2C_ReadRegister
#define Soft_I2C_SDA_STATE   	HAL_GPIO_ReadPin(Soft_I2C_PORT, Soft_I2C_SDA)
#define Soft_I2C_READY        0x00
#define Soft_I2C_BUS_BUSY	    0x01
#define Soft_I2C_BUS_ERROR    0x02
#define Soft_I2C_NACK         0x00
#define Soft_I2C_ACK          0x01
#define ST_Sensors_I2C_WriteRegister    Soft_I2C_Write
#define ST_Sensors_I2C_ReadRegister     Soft_I2C_Read

unsigned long ST_Hard_Sensors_I2C_WriteRegister(unsigned char Address, unsigned char RegisterAddr, unsigned short RegisterLen, const unsigned char *RegisterValue)
{
	uint32_t i=0;

	/* Send STRAT condition */
	I2C_GenerateSTART(macI2Cx, ENABLE);
	I2CTimeout = I2CT_FLAG_TIMEOUT;
	/* Test on EV5 and clear it */
	while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_MODE_SELECT))
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(0);

	/* Send slave address for write */
//I2C_Send7bitAddress(macI2Cx, (Address<<1), I2C_Direction_Transmitter);
	I2C_Send7bitAddress(macI2Cx, Address, I2C_Direction_Transmitter);
	I2CTimeout = I2CT_FLAG_TIMEOUT;
	/* Test on EV6 and clear it */
	while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED))
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(1);

	/* Send the slave's internal address to write to */
	I2C_SendData(macI2Cx, RegisterAddr);
	I2CTimeout = I2CT_FLAG_TIMEOUT;
	/* Test on EV8 and clear it */
	while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(2);

	/* Send the byte to be written */
	for( i=0; i<(RegisterLen); i++)
	{
		I2CTimeout = I2CT_FLAG_TIMEOUT;
		/* Test on EV8 and clear it */
		while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))
			if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(3);
		/* Prepare the register value to be sent */
		I2C_SendData(macI2Cx, RegisterValue[i]);
	}

	I2CTimeout = I2CT_FLAG_TIMEOUT;
	/* Test on EV8 and clear it */
	while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(4);
	/* Send STOP condition */
	I2C_GenerateSTOP(macI2Cx, ENABLE);

	return 0;
}

unsigned long ST_Hard_Sensors_I2C_ReadRegister(unsigned char Address, unsigned char RegisterAddr, unsigned short RegisterLen, unsigned char *RegisterValue)
{
	I2CTimeout = I2CT_LONG_TIMEOUT;
	while(I2C_GetFlagStatus(macI2Cx, I2C_FLAG_BUSY)) // Added by Najoua 27/08/2008
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(5);

	I2C_GenerateSTART(macI2Cx, ENABLE);
	I2CTimeout = I2CT_FLAG_TIMEOUT;
	/* Test on EV5 and clear it */
	while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_MODE_SELECT))
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(6);

	/* Send slave address for write */
//I2C_Send7bitAddress(macI2Cx, (Address<<1), I2C_Direction_Transmitter);
	I2C_Send7bitAddress(macI2Cx, Address, I2C_Direction_Transmitter);
	I2CTimeout = I2CT_FLAG_TIMEOUT;
	/* Test on EV6 and clear it */
	while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED))
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(7);

	/* Clear EV6 by setting again the PE bit */
	I2C_Cmd(macI2Cx, ENABLE);
	/* Send the slave's internal address to write to */
	I2C_SendData(macI2Cx, RegisterAddr);
	I2CTimeout = I2CT_FLAG_TIMEOUT;
	/* Test on EV8 and clear it */
	while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(8);

	/* Send STRAT condition a second time */
	I2C_GenerateSTART(macI2Cx, ENABLE);
	I2CTimeout = I2CT_FLAG_TIMEOUT;
	/* Test on EV5 and clear it */
	while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_MODE_SELECT))
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(9);

	/* Send slave address for read */
//I2C_Send7bitAddress(macI2Cx, (Address<<1), I2C_Direction_Receiver);
	I2C_Send7bitAddress(macI2Cx, Address, I2C_Direction_Receiver);
	I2CTimeout = I2CT_FLAG_TIMEOUT;
	/* Test on EV6 and clear it */
	while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED))
		if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(10);

	/* While there is data to be read */
	while(RegisterLen)
	{
		if(RegisterLen == 1)
		{
			I2CTimeout = I2CT_LONG_TIMEOUT;
			while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_BYTE_RECEIVED))
				if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(10);
			/* Disable Acknowledgement */
			I2C_AcknowledgeConfig(macI2Cx, DISABLE);
			/* Send STOP Condition */
			I2C_GenerateSTOP(macI2Cx, ENABLE);
		}

		I2CTimeout = I2CT_LONG_TIMEOUT;
		while(!I2C_CheckEvent(macI2Cx, I2C_EVENT_MASTER_BYTE_RECEIVED))
			if((I2CTimeout--) == 0) return I2C_TIMEOUT_UserCallback(10);
		
		{
			/* Read a byte from the slave */
			*RegisterValue = I2C_ReceiveData(macI2Cx);
			/* Point to the next location where the byte read will be saved */
			RegisterValue++;
			/* Decrement the read bytes counter */
			RegisterLen--;
		}
	}

	/* Enable Acknowledgement to be ready for another reception */
	I2C_AcknowledgeConfig(macI2Cx, ENABLE);

	return 0; //正常，返回0
}
